tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors1(strict=true).errors.txt
fatarrowfunctionsOptionalArgsErrors1.ts(1,2): error TS7006: Parameter 'arg1' implicitly has an 'any' type.
fatarrowfunctionsOptionalArgsErrors1.ts(1,9): error TS1016: A required parameter cannot follow an optional parameter.
fatarrowfunctionsOptionalArgsErrors1.ts(1,9): error TS7006: Parameter 'arg2' implicitly has an 'any' type.
fatarrowfunctionsOptionalArgsErrors1.ts(2,2): error TS2370: A rest parameter must be of an array type.
fatarrowfunctionsOptionalArgsErrors1.ts(2,2): error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
fatarrowfunctionsOptionalArgsErrors1.ts(2,8): error TS1047: A rest parameter cannot be optional.
fatarrowfunctionsOptionalArgsErrors1.ts(3,2): error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
fatarrowfunctionsOptionalArgsErrors1.ts(4,5): error TS1048: A rest parameter cannot have an initializer.
fatarrowfunctionsOptionalArgsErrors1.ts(7,12): error TS7006: Parameter 'arg2' implicitly has an 'any' type.


==== fatarrowfunctionsOptionalArgsErrors1.ts (9 errors) ====
    (arg1?, arg2) => 101;
     ~~~~~
!!! error TS7006: Parameter 'arg1' implicitly has an 'any' type.
            ~~~~
!!! error TS1016: A required parameter cannot follow an optional parameter.
            ~~~~
!!! error TS7006: Parameter 'arg2' implicitly has an 'any' type.
    (...arg?) => 102;
     ~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
     ~~~~~~~
!!! error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
           ~
!!! error TS1047: A rest parameter cannot be optional.
    (...arg) => 103;
     ~~~~~~
!!! error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
    (...arg:number [] = []) => 104;
        ~~~
!!! error TS1048: A rest parameter cannot have an initializer.
    
    // Uninitialized parameter makes the initialized one required
    (arg1 = 1, arg2) => 1; 
               ~~~~
!!! error TS7006: Parameter 'arg2' implicitly has an 'any' type.